--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -24,7 +24,8 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+/* h2 tag makes it look like a upper right navigation bar. */
+.header h2 {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,11 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header h2 ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header h2 ul li {
     display: inline-block;
     margin-left: 25px;
 }
@@ -194,7 +195,6 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
-
 .footer h2 {
     font-size: 20px;
 }
