--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -25,7 +25,7 @@ body {
 }
 
 /* h2 tag makes it look like a upper right navigation bar. */
-.header h2 {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -33,11 +33,11 @@ body {
     font-size: 20px;
 }
 
-.header h2 ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header h2 ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
